# sched

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.spdx  Makefile  NOTICE  README.md  config.yml  doxygen.conf
docs/: env.txt
exp1/: algolistdyn.txt  exp1.txt  genExp1.sh  plot.sh  plotExp1.py  simExp1.sh  wrap.conf
hosts/cc-8.pc2.uni-paderborn.de/: tasks.def
hosts/cc-8.pc2.uni-paderborn.de/ms_results/: ms_correlation(1024)@IntelXeon_energy.csv  ms_correlation(1024)@IntelXeon_time.csv  ms_correlation(1024)@MaxelerVectis_energy.csv  ms_correlation(1024)@MaxelerVectis_time.csv  ms_correlation(1024)@NvidiaTesla_energy.csv  ms_correlation(1024)@NvidiaTesla_time.csv  ms_correlation(2048)@IntelXeon_energy.csv  ms_correlation(2048)@IntelXeon_time.csv  ms_correlation(2048)@MaxelerVectis_energy.csv  ms_correlation(2048)@MaxelerVectis_time.csv  ms_correlation(2048)@NvidiaTesla_energy.csv  ms_correlation(2048)@NvidiaTesla_time.csv  ms_correlation(256)@IntelXeon_energy.csv  ms_correlation(256)@IntelXeon_time.csv  ms_correlation(256)@MaxelerVectis_energy.csv  ms_correlation(256)@MaxelerVectis_time.csv  ms_correlation(256)@NvidiaTesla_energy.csv  ms_correlation(256)@NvidiaTesla_time.csv  ms_correlation(4096)@IntelXeon_energy.csv  ms_correlation(4096)@IntelXeon_time.csv  ms_correlation(4096)@MaxelerVectis_energy.csv  ms_correlation(4096)@MaxelerVectis_time.csv  ms_correlation(4096)@NvidiaTesla_energy.csv  ms_correlation(4096)@NvidiaTesla_time.csv  ms_correlation(512)@IntelXeon_energy.csv  ms_correlation(512)@IntelXeon_time.csv  ms_correlation(512)@MaxelerVectis_energy.csv  ms_correlation(512)@MaxelerVectis_time.csv  ms_correlation(512)@NvidiaTesla_energy.csv  ms_correlation(512)@NvidiaTesla_time.csv  ms_correlation(8192)@IntelXeon_energy.csv  ms_correlation(8192)@IntelXeon_time.csv  ms_correlation(8192)@MaxelerVectis_energy.csv  ms_correlation(8192)@MaxelerVectis_time.csv  ms_correlation(8192)@NvidiaTesla_energy.csv  ms_correlation(8192)@NvidiaTesla_time.csv  ms_gaussblur(1024)@IntelXeon_energy.csv  ms_gaussblur(1024)@IntelXeon_time.csv  ms_gaussblur(1024)@MaxelerVectis_energy.csv  ms_gaussblur(1024)@MaxelerVectis_time.csv  (+103 more)
hosts/test/: tasks.def
hosts/test/ms_idle/: idle_power_test.json
hosts/test/ms_results/: ms_bfs(1024)@IntelXeon_energy.csv  ms_bfs(1024)@IntelXeon_time.csv  ms_bfs(1024)@NvidiaTesla_energy.csv  ms_bfs(1024)@NvidiaTesla_time.csv  ms_bfs(128)@IntelXeon_energy.csv  ms_bfs(128)@IntelXeon_time.csv  ms_bfs(128)@NvidiaTesla_energy.csv  ms_bfs(128)@NvidiaTesla_time.csv  ms_bfs(16384)@IntelXeon_energy.csv  ms_bfs(16384)@IntelXeon_time.csv  ms_bfs(16384)@NvidiaTesla_energy.csv  ms_bfs(16384)@NvidiaTesla_time.csv  ms_bfs(2048)@IntelXeon_energy.csv  ms_bfs(2048)@IntelXeon_time.csv  ms_bfs(2048)@NvidiaTesla_energy.csv  ms_bfs(2048)@NvidiaTesla_time.csv  ms_bfs(256)@IntelXeon_energy.csv  ms_bfs(256)@IntelXeon_time.csv  ms_bfs(256)@NvidiaTesla_energy.csv  ms_bfs(256)@NvidiaTesla_time.csv  ms_bfs(4096)@IntelXeon_energy.csv  ms_bfs(4096)@IntelXeon_time.csv  ms_bfs(4096)@NvidiaTesla_energy.csv  ms_bfs(4096)@NvidiaTesla_time.csv  ms_bfs(512)@IntelXeon_energy.csv  ms_bfs(512)@IntelXeon_time.csv  ms_bfs(512)@NvidiaTesla_energy.csv  ms_bfs(512)@NvidiaTesla_time.csv  ms_bfs(8192)@IntelXeon_energy.csv  ms_bfs(8192)@IntelXeon_time.csv  ms_bfs(8192)@NvidiaTesla_energy.csv  ms_bfs(8192)@NvidiaTesla_time.csv  ms_correlation(1024)@IntelXeon_energy.csv  ms_correlation(1024)@IntelXeon_time.csv  ms_correlation(1024)@MaxelerVectis_energy.csv  ms_correlation(1024)@MaxelerVectis_time.csv  ms_correlation(1024)@NvidiaTesla_energy.csv  ms_correlation(1024)@NvidiaTesla_time.csv  ms_correlation(128)@IntelXeon_energy.csv  ms_correlation(128)@IntelXeon_time.csv  (+162 more)
hosts/test/test_references/default/METMig2/20190628-161915/: METMig2.conf  sched_sim.out
hosts/test/test_references/default/METMig2/20190628-161917/: METMig2.conf  sched_exp.out  wrap0.groupconf  wrap1.groupconf  wrap8.groupconf
hosts/test/test_references/default/conf_execidlereschedule/20190628-123804/: conf_execidlereschedule.conf
lib/: buildcjson.sh  buildrehearse.sh  buildyaml.sh
ms/: default_eventlist.txt
scripts/: CMakeLists.txt  README.md  algolist.txt  algolistdyn.txt  alltasks.py  cdf.py  check  endtaskhook.sh  env.sh  execexp.sh  execsim.sh  genconfig.sh  log_stats.py  lp2mps.sh  lp_solve.sh  msresults.py  plot.py  plot_beta.py  plot_taskset.py  plot_tod.py  plot_tod_img.py  report.md  report.py  report_gen.py  sleep.py  sleeptask.py  sol_cor2lp.sh  start.sh  taskset_exec.py  taskset_gen.py  taskset_gen_schedule.py  taskset_stats.py  test.py  test.sh  test2ref.sh  valwrap.sh
scripts/cdf/: bimodal.cdf  bimodal.list  bimodal2.list  gauss.cdf  gauss.list  google.cdf  google.list  list2cdf.py  readme.txt  svg2cdf.py  svg2list.sh
src/: CComClient.cpp  CComClient.h  CComSchedClient.cpp  CComSchedClient.h  CComSchedScheduler.cpp  CComSchedScheduler.h  CComServer.cpp  CComServer.h  CComUnixClient.cpp  CComUnixClient.h  CComUnixSchedClient.cpp  CComUnixSchedClient.h  CComUnixSchedClientMain.cpp  CComUnixSchedClientMain.h  CComUnixSchedClientWrap.cpp  CComUnixSchedClientWrap.h  CComUnixSchedScheduler.cpp  CComUnixSchedScheduler.h  CComUnixSchedSchedulerWrap.cpp  CComUnixSchedSchedulerWrap.h  CComUnixSchedServerMain.cpp  CComUnixSchedServerMain.h  CComUnixSchedServerWrap.cpp  CComUnixSchedServerWrap.h  CComUnixServer.cpp  CComUnixServer.h  CComUnixWriteBuffer.cpp  CComUnixWriteBuffer.h  CConfig.cpp  CConfig.h  CEstimation.cpp  CEstimation.h  CEstimationLinear.cpp  CEstimationLinear.h  CExternalHook.cpp  CExternalHook.h  CFeedback.cpp  CFeedback.h  CFeedbackMain.cpp  CFeedbackMain.h  (+174 more)
tests/: README.md  runtests.sh
tests/METMig2/: METMig2.conf
tests/conf_execsuspend/: conf_execsuspend.conf  test
tests/conf_mig/: conf_mig.conf
tests/conf_reqapps/: conf_reqapps.conf
tests/conf_res1/: conf_res1.conf  conf_res1.sim
tests/conf_res2/: conf_res2.conf
tests/conf_res3/: conf_res3.conf
tools/test_task/: Makefile  README.md  messages.txt  test_task.cpp  test_task.py
(+677 files in other folders)
