install(DIRECTORY . DESTINATION scripts USE_SOURCE_PERMISSIONS FILES_MATCHING 
	REGEX ".*py" 
	REGEX ".*md" 
	REGEX ".*sh" 
	REGEX "check"
	REGEX ".*pyc" EXCLUDE 
	REGEX ".*swp" EXCLUDE)
install(DIRECTORY cdf DESTINATION scripts/cdf USE_SOURCE_PERMISSIONS REGEX ".*pcy" EXCLUDE REGEX ".*swp" EXCLUDE)
